# Projects

./: README.md  demographic-data-analyzer.ipynb
Projects/projects/test_tasks/: tags.ipynb
data/: fcc_cat_dog.ipynb  fcc_sms_text_classification.ipynb
projects/: demographic-data-analyzer.ipynb  fcc_cat_dog.ipynb  fcc_predict_health_costs_with_regression.ipynb  fcc_sms_text_classification.ipynb  fcc_sms_text_classification.py  fcc_sms_text_classification_v1.ipynb  sea-level-predictor.ipynb
projects/fcc_DA/: medical-data-visualizer.ipynb  page-view-time-series-visualizer.ipynb
projects/fcc_ML/: fcc_book_recommendation_knn.ipynb  fcc_predict_health_costs_with_regression.ipynb
projects/fcc_RD/: universe.sql
projects/fcc_RD/World_Cup/: insert_data.sh  queries.sh  worldcup.sql
projects/math/: README.md
projects/test_tasks/: task_1_numpy.ipynb  task_1_numpy.py  task_2_pandas.py
projects/test_tasks/Gorod/: README.md  books.ipynb
projects/test_tasks/HSE/: README.md  funk.py  pyproject.toml  task_1.py  task_2.py
projects/test_tasks/HSE/tests/: test_hse.py
projects/test_tasks/Logistics/: README.md  tags.ipynb
projects/test_tasks/Mobio/: README.md  mobio.ipynb  mobio.py
projects/test_tasks/Ridex GmbH/: task_1_numpy.ipynb
projects/test_tasks/Ridex_GmbH/: README.md  task_1_numpy.ipynb  task_1_numpy.py  task_2_pandas.ipynb  task_3_DA.ipynb  task_3_da.py  task_4_sklearn.ipynb  task_4_sklearn.py
projects/test_tasks/Valiotti/: README.md  dash.ipynb  games_market_dash_Simon_Chou.py  task_1.sql  task_2.sql  task_3.sql
(+1 files in other folders)
