[tool.poetry]
name = "HSE"
version = "0.1.0"
description = "test task"
authors = ["Fishenzone"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.3"
numpy = "^1.19.2"
seaborn = "^0.11.1"
adjustText = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"