[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["Simon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
numpy = "^1.23.3"
notebook = "^6.4.12"
matplotlib = "^3.5.3"
seaborn = "^0.12.0"
scikit-learn = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
